--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ protobuf==5.27.2
 pycountry==24.6.1
 Requests==2.32.3
 streamlit==1.36.0
-google-generativeai
+protobuf==4.23.2
+google-generativeai==0.7.0
